# SPLC_Runtime

./: CMakeLists.txt  README.md
src/: LOCATED_VARIABLES.h  POUS.c  POUS.h  STD_CONF.c  STD_RESSOURCE.c  VARIABLES.csv  dataStructure.c  dataStructure.h  glueVars.c  glueVars.cpp  glueVars.h  hardware_layer.c  hardware_layer.cpp  ladder.h  log.c  log.h  main.c  main.cpp  main.st
src/glueGen/: CMakeLists.txt
